--- a/landing/CSS/login_style.css
+++ b/landing/CSS/login_style.css
@@ -43,6 +43,7 @@ nav a:hover {
 nav li {
     display: inline;
     padding: 0 30px;
+    box-sizing: border-box;
 }
 
 main {
@@ -76,15 +77,17 @@ body {
     color: #a0b3b0;
     font-size: 1.25em;
     float: left;
-    width: 45%;
+    width: 50%;
     text-align: center;
     cursor: pointer;
     transition: 0.5s ease;
     text-decoration: none;
+    box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
 }
 
 .tab:hover {
-    background-color: darkblue;
+    background-color: rgb(236, 58, 76);
     color: white;
 }
 
@@ -112,9 +115,12 @@ h1 {
 input {
     border: 1px solid #a0b3b0;
     position: relative;
-    margin-bottom: 40px;
-    height: 30px;
+    margin-bottom: 35px;
+    height: auto;
     font-size: 1.2em;
+    padding: 10px;
+    box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
 }
 
 input:focus {
@@ -130,11 +136,12 @@ input:focus {
 
 .toprow input {
     float: left;
-    width: 49.165%;
+    width: 48%;
+    box-sizing: border-box;
 }
 
 .firstchild {
-    margin-right: 1%;
+    margin-right: 4%;
 }
 
 .lastchild {
@@ -156,15 +163,16 @@ button {
     width: 100%;
     display: block;
     cursor: pointer;
+    font-family: 'Lato', sans-serif;
 }
 
 button:hover {
-    background-color: darkblue;
+    background-color: rgb(236, 58, 76);
 }
 
 .forgot {
-  margin-top: -30px;
-  text-align: right;
+    margin-top: -30px;
+    text-align: right;
     margin-bottom: 5px;
 }
 
@@ -187,7 +195,7 @@ button:hover {
 
 footer {
     width: 100%;
-    height: 70px;
+    height: auto;
     background-color: white;
     border-top: 1px outset black;
 }
