--- a/landing/CSS/login_style.css
+++ b/landing/CSS/login_style.css
@@ -1,205 +1,205 @@
 * {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-    background: transparent;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-size: 100%;
+	vertical-align: baseline;
+	background: transparent;
 }
 
 header {
-    background-color: white;
-    width: 100%;
-    height: 70px;
-    position: fixed;
+	background-color: white;
+	width: 100%;
+	height: 70px;
+	position: fixed;
 }
 
 .navtitle {
-    margin-left: 14%;
-    display: inline-block;
-    margin-top: 27px;
-    font-size: 1.25em;
-    font-family: 'Merriweather', serif;
+	margin-left: 14%;
+	display: inline-block;
+	margin-top: 27px;
+	font-size: 1.25em;
+	font-family: 'Merriweather', serif;
 }
 
 nav {
-    float: right;
-    margin-right: 14%;
-    margin-top: 25px;
-    font-size: 1em;
+	float: right;
+	margin-right: 14%;
+	margin-top: 25px;
+	font-size: 1em;
 }
 
 nav a {
-    text-decoration: none;
-    color: black;
-    font-family: 'Open Sans', serif;
+	text-decoration: none;
+	color: black;
+	font-family: 'Open Sans', serif;
 }
 
 nav a:hover {
-    color: #707070;
+	color: #707070;
 }
 
 nav li {
-    display: inline;
-    padding: 0 30px;
-    box-sizing: border-box;
+	display: inline;
+	padding: 0 30px;
+	box-sizing: border-box;
 }
 
 nav .current {
-    color: blue;
+	color: blue;
 }
 
 main {
-    padding-top: 70px;
+	padding-top: 70px;
 }
 
 body {
-    background-color: rgba(201, 219, 225, 0.3);
+	background-color: rgba(201, 219, 225, 0.3);
 }
 
 .tabs {
-    list-style: none;
-    padding: 0;
-    margin: 0 0 40px 0;
+	list-style: none;
+	padding: 0;
+	margin: 0 0 40px 0;
 }
 
 .tabs:after {
-    content: "";
-    display: table;
-    clear: both;
+	content: '';
+	display: table;
+	clear: both;
 }
 
 .tabs li {
-    display: inline;
+	display: inline;
 }
 
 .tab {
-    display: block;
-    padding: 15px;
-    background: rgba(160, 179, 176, 0.25);
-    color: #a0b3b0;
-    font-size: 1.25em;
-    float: left;
-    width: 50%;
-    text-align: center;
-    cursor: pointer;
-    transition: 0.5s ease;
-    text-decoration: none;
-    box-sizing: border-box;
-    font-family: 'Lato', sans-serif;
+	display: block;
+	padding: 15px;
+	background: rgba(160, 179, 176, 0.25);
+	color: #A0B3B0;
+	font-size: 1.25em;
+	float: left;
+	width: 50%;
+	text-align: center;
+	cursor: pointer;
+	transition: 0.5s ease;
+	text-decoration: none;
+	box-sizing: border-box;
+	font-family: 'Lato', sans-serif;
 }
 
 .tab:hover {
-    background-color: rgb(236, 58, 76);
-    color: white;
+	background-color: rgb(236, 58, 76);
+	color: white;
 }
 
 .active {
-    background-color: rgb(241, 104, 118);
-    color: white;
+	background-color: rgb(241, 104, 118);
+	color: white;
 }
 
 .form {
-    background-color: white;
-    padding: 40px;
-    max-width: 600px;
-    margin: 40px auto;
-    border-radius: 4px;
-    box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
+	background-color: white;
+	padding: 40px;
+	max-width: 600px;
+	margin: 40px auto;
+	border-radius: 4px;
+	box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
 }
 
 h1 {
-    text-align: center;
-    font-family: 'Open Sans', serif;
-    font-size: 1.8em;
-    margin-bottom: 20px;
+	text-align: center;
+	font-family: 'Open Sans', serif;
+	font-size: 1.8em;
+	margin-bottom: 20px;
 }
 
 input {
-    border: 1px solid #a0b3b0;
-    position: relative;
-    margin-bottom: 35px;
-    height: auto;
-    font-size: 1.2em;
-    padding: 10px;
-    box-sizing: border-box;
-    font-family: 'Lato', sans-serif;
+	border: 1px solid #A0B3B0;
+	position: relative;
+	margin-bottom: 35px;
+	height: auto;
+	font-size: 1.2em;
+	padding: 10px;
+	box-sizing: border-box;
+	font-family: 'Lato', sans-serif;
 }
 
 input:focus {
-    outline: 0;
-    border-color: lightblue;
+	outline: 0;
+	border-color: lightblue;
 }
 
 .toprow:after {
-    content: "";
-    display: table;
-    clear: both;
+	content: '';
+	display: table;
+	clear: both;
 }
 
 .toprow input {
-    float: left;
-    width: 48%;
-    box-sizing: border-box;
+	float: left;
+	width: 48%;
+	box-sizing: border-box;
 }
 
 .firstchild {
-    margin-right: 4%;
+	margin-right: 4%;
 }
 
 .lastchild {
-    margin: 0;
+	margin: 0;
 }
 
 .secondary input {
-    width: 100%;
+	width: 100%;
 }
 
 button {
-    padding: 15px 0;
-    font-size: 1.5em;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
-    background-color: rgb(241, 104, 118);
-    color: white;
-    transition: all 0.5s ease;
-    width: 100%;
-    display: block;
-    cursor: pointer;
-    font-family: 'Lato', sans-serif;
+	padding: 15px 0;
+	font-size: 1.5em;
+	text-transform: uppercase;
+	letter-spacing: 0.1em;
+	background-color: rgb(241, 104, 118);
+	color: white;
+	transition: all 0.5s ease;
+	width: 100%;
+	display: block;
+	cursor: pointer;
+	font-family: 'Lato', sans-serif;
 }
 
 button:hover {
-    background-color: rgb(236, 58, 76);
+	background-color: rgb(236, 58, 76);
 }
 
 .forgot {
-    margin-top: -30px;
-    text-align: right;
-    margin-bottom: 5px;
+	margin-top: -30px;
+	text-align: right;
+	margin-bottom: 5px;
 }
 
 .forgot a {
-    text-decoration: none;
-    color: black;
+	text-decoration: none;
+	color: black;
 }
 
 .forgot a:hover {
-    color: green;
+	color: green;
 }
 
 #signup {
-    display: block;
+	display: block;
 }
 
 #login {
-    display: none;
+	display: none;
 }
 
 footer {
-    width: 100%;
-    height: auto;
-    background-color: white;
-    border-top: 1px outset black;
+	width: 100%;
+	height: auto;
+	background-color: white;
+	border-top: 1px outset black;
 }
