--- a/landing/CSS/userpage_style.css
+++ b/landing/CSS/userpage_style.css
@@ -1,557 +1,557 @@
 * {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-    background: transparent;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-size: 100%;
+	vertical-align: baseline;
+	background: transparent;
 }
 
 header {
-    background-color: white;
-    width: 100%;
-    height: 70px;
-    position: fixed;
+	background-color: white;
+	width: 100%;
+	height: 70px;
+	position: fixed;
 }
 
 .navtitle {
-    margin-left: 14%;
-    display: inline-block;
-    margin-top: 27px;
-    font-size: 1.25em;
-    font-family: 'Merriweather', serif;
+	margin-left: 14%;
+	display: inline-block;
+	margin-top: 27px;
+	font-size: 1.25em;
+	font-family: 'Merriweather', serif;
 }
 
 nav {
-    float: right;
-    margin-right: 14%;
-    margin-top: 25px;
-    font-size: 1em;
+	float: right;
+	margin-right: 14%;
+	margin-top: 25px;
+	font-size: 1em;
 }
 
 nav .menulink {
-    text-decoration: none;
-    color: black;
-    font-family: 'Open Sans', serif;
-    cursor: pointer;
+	text-decoration: none;
+	color: black;
+	font-family: 'Open Sans', serif;
+	cursor: pointer;
 }
 
 nav .menulink:hover {
-    color: #707070;
+	color: #707070;
 }
 
 nav .lastmenu {
-    display: inline;
-    padding-left: 30px;
-    box-sizing: border-box;
+	display: inline;
+	padding-left: 30px;
+	box-sizing: border-box;
 }
 
 nav .menu {
-    display: inline;
-    padding: 0 30px;
-    box-sizing: border-box;
+	display: inline;
+	padding: 0 30px;
+	box-sizing: border-box;
 }
 
 .logout {
-    position: absolute;
-    display: inline-block;
-    height: 16px;
-    width: 16px;
-    margin-top: 2.3px;
+	position: absolute;
+	display: inline-block;
+	height: 16px;
+	width: 16px;
+	margin-top: 2.3px;
 }
 
 nav .current {
-    color: blue;
+	color: blue;
 }
 
 main {
-    padding-top: 100px;
-    margin-left: 14%;
-    margin-right: 14%;
+	padding-top: 100px;
+	margin-left: 14%;
+	margin-right: 14%;
 }
 
 body {
-    background-color: rgba(201, 219, 225, 0.3);
+	background-color: rgba(201, 219, 225, 0.3);
 }
 
 .maincontent {
-    border-top: 1px solid rgb(241, 104, 118);
-    background-color: white;
-    width: 55%;
-    float: left;
-    box-shadow: 2px 4px 20px rgba(19, 35, 47, 0.3);
-    float: left;
-    clear: left;
-    height: 100%;
+	border-top: 1px solid rgb(241, 104, 118);
+	background-color: white;
+	width: 55%;
+	float: left;
+	box-shadow: 2px 4px 20px rgba(19, 35, 47, 0.3);
+	float: left;
+	clear: left;
+	height: 100%;
 }
 
 .usernav li {
-    display: inline-flex;
-    margin: 0;
-    padding: 0;
-    float: left;
-    clear: right;
+	display: inline-flex;
+	margin: 0;
+	padding: 0;
+	float: left;
+	clear: right;
 }
 
 .usernav .tab {
-    box-sizing: border-box;
-    height: 30px;
-    background-color: white;
-    display: inline-flex;
-    border: 1px solid rgb(241, 104, 118);
-    border-bottom: none;
-    padding-top: 2px;
-    padding-right: 10px;
-    padding-left: 10px;
-    text-decoration: none;
-    color: black;
-    font-family: 'Open Sans', serif;
-    cursor: pointer;
-    font-size: 1em;
-    margin: 0;
-    transition: all 0.3s ease;
+	box-sizing: border-box;
+	height: 30px;
+	background-color: white;
+	display: inline-flex;
+	border: 1px solid rgb(241, 104, 118);
+	border-bottom: none;
+	padding-top: 2px;
+	padding-right: 10px;
+	padding-left: 10px;
+	text-decoration: none;
+	color: black;
+	font-family: 'Open Sans', serif;
+	cursor: pointer;
+	font-size: 1em;
+	margin: 0;
+	transition: all 0.3s ease;
 }
 
 .usernav .tab:hover {
-    background-color: rgb(236, 58, 76);
-    color: white;
+	background-color: rgb(236, 58, 76);
+	color: white;
 }
 
 .usernav .active {
-    background-color: rgb(241, 104, 118);
-    color: white;
+	background-color: rgb(241, 104, 118);
+	color: white;
 }
 
 .formcontent {
-    margin-left: 2%;
-    margin-right: 2%;
-    padding-bottom: 15px;
+	margin-left: 2%;
+	margin-right: 2%;
+	padding-bottom: 15px;
 }
 
 .userinfo {
-    margin-bottom: 30px;
-    border-bottom: 1px solid #95989A;
+	margin-bottom: 30px;
+	border-bottom: 1px solid #95989A;
 }
 
-.userinfo p{
-    display: inline-block;
-    box-sizing: border-box;
-    width: 49.8%;
-    color: #95989A;
+.userinfo p {
+	display: inline-block;
+	box-sizing: border-box;
+	width: 49.8%;
+	color: #95989A;
 }
 
 .userinfo .balance {
-    text-align: right;
+	text-align: right;
 }
 
-.optionrow{
-    display: block;
+.optionrow {
+	display: block;
 }
 
 .one {
-    border-bottom: 1px solid grey;
-    padding-bottom: 10px;
+	border-bottom: 1px solid grey;
+	padding-bottom: 10px;
 }
 
 .topprofile input {
-    display: block;
-    border: 1px solid #a0b3b0;
-    padding: 5px;
-    margin-bottom: 10px;
-    width: 98%;
-    border-radius: 3px;
+	display: block;
+	border: 1px solid #A0B3B0;
+	padding: 5px;
+	margin-bottom: 10px;
+	width: 98%;
+	border-radius: 3px;
 }
 
 .topprofile input:last-child {
-    margin-bottom: 5px;;
-    margin-top: 10px;
+	margin-bottom: 5px;;
+	margin-top: 10px;
 }
 
-.field{
-    display: block;
+.field {
+	display: block;
 }
 
 .input {
-    border: 1px solid #a0b3b0;
+	border: 1px solid #A0B3B0;
 }
 
 .wrapper {
-    border-top: 1px solid grey;
+	border-top: 1px solid grey;
 }
 
 .wish {
-    width: 98%;
+	width: 98%;
 }
 
 h1 {
-    display: inline-block;
-    font-size: 1.5em;
-    font-family: 'Open Sans', serif;
-    margin-bottom: 20px;
-    margin-top: 15px;
+	display: inline-block;
+	font-size: 1.5em;
+	font-family: 'Open Sans', serif;
+	margin-bottom: 20px;
+	margin-top: 15px;
 }
 
 .confirm {
-    margin-top: 10px;
-    border-radius: 5px;
-    background-color: rgba(211, 211, 211, 0.3);
-    padding: 15px;
+	margin-top: 10px;
+	border-radius: 5px;
+	background-color: rgba(211, 211, 211, 0.3);
+	padding: 15px;
 }
 
 .confirm p, input {
-    margin-bottom: 5px;
+	margin-bottom: 5px;
 }
 
 .confirm input {
-    padding: 5px;
-    background-color: white;
-    border-radius: 3px;
+	padding: 5px;
+	background-color: white;
+	border-radius: 3px;
 }
 
 .btnwrapper {
-    border-top: 1px solid grey;
-    margin-top: 10px;
+	border-top: 1px solid grey;
+	margin-top: 10px;
 }
 
 .btnwrapper button {
-    margin-top: 10px;
-    padding: 5px;
-    font-size: 1em;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
-    background-color: rgb(241, 104, 118);
-    color: white;
-    display: block;
-    cursor: pointer;
-    font-family: 'Lato', sans-serif;
-    transition: all 0.5s ease;
+	margin-top: 10px;
+	padding: 5px;
+	font-size: 1em;
+	text-transform: uppercase;
+	letter-spacing: 0.1em;
+	background-color: rgb(241, 104, 118);
+	color: white;
+	display: block;
+	cursor: pointer;
+	font-family: 'Lato', sans-serif;
+	transition: all 0.5s ease;
 }
 
 button:hover {
-    background-color: rgb(236, 58, 76);
-    color: white;
+	background-color: rgb(236, 58, 76);
+	color: white;
 }
 
-.topup select{
-    display: block;
-    width: 30%;
-    padding: 2px;
-    margin-bottom: 10px;
+.topup select {
+	display: block;
+	width: 30%;
+	padding: 2px;
+	margin-bottom: 10px;
 }
 
 .topup input {
-    padding: 5px;
-    margin-bottom: 10px;
-    border-radius: 3px;
+	padding: 5px;
+	margin-bottom: 10px;
+	border-radius: 3px;
 }
 
 .topup .name {
-    width: 60%;
+	width: 60%;
 }
 
 .topup .card {
-    width: 40%;
+	width: 40%;
 }
 
 .topup .ccv {
-    width: 17%;
+	width: 17%;
 }
 
 .amount {
-    width: 28.5%;
+	width: 28.5%;
 }
 
 .createwish input {
-    padding: 5px;
-    margin-bottom: 10px;
-    border-radius: 3px;
+	padding: 5px;
+	margin-bottom: 10px;
+	border-radius: 3px;
 }
 
 .two {
-    border-bottom: 1px solid grey;
+	border-bottom: 1px solid grey;
 }
 
 .street, .city, .country {
-    width: 40%;
+	width: 40%;
 }
 
 .street, .house, .flat, .city, .zip {
-    display: inline-block;
+	display: inline-block;
 }
 
 .house, .flat, .zip {
-    width: 25%;
+	width: 25%;
 }
 
 .boxes {
-    float: right;
-    width: 40%;
-    margin-left: 5%;
-    margin-top: -30px;
+	float: right;
+	width: 40%;
+	margin-left: 5%;
+	margin-top: -30px;
 }
 
 .divisor {
-    height: 40px;
-    display: block;
-    width: 100%;
+	height: 40px;
+	display: block;
+	width: 100%;
 }
 
 .box {
-    box-sizing: border-box;
-    box-shadow: 2px 4px 20px rgba(19, 35, 47, 0.3);
+	box-sizing: border-box;
+	box-shadow: 2px 4px 20px rgba(19, 35, 47, 0.3);
 }
 
 .box h2 {
-    display: inline-block;
-    width: 100%;
-    line-height: 1.8em;
-    font-size: 1.3em;
-    background-color: rgb(241, 104, 118);
-    color: white;
-    text-align: center;
-    font-family: 'Open Sans', serif;
+	display: inline-block;
+	width: 100%;
+	line-height: 1.8em;
+	font-size: 1.3em;
+	background-color: rgb(241, 104, 118);
+	color: white;
+	text-align: center;
+	font-family: 'Open Sans', serif;
 }
 
 .boxcontent {
-    padding: 10px 20px;
-    background-color: white;
-    font-family: 'Lato', sans-serif;
+	padding: 10px 20px;
+	background-color: white;
+	font-family: 'Lato', sans-serif;
 }
 
 .boxcontent .sub {
-    display: inline-block;
-    width: 49.45%;
+	display: inline-block;
+	width: 49.45%;
 }
 
 .boxcontent .title {
-    font-size: 1.4em;
+	font-size: 1.4em;
 }
 
 .boxcontent .para {
-    line-height: 1.4em;
-    text-align: right;
-    font-size: 1em;
+	line-height: 1.4em;
+	text-align: right;
+	font-size: 1em;
 }
 
 .boxcontent .boxtop {
-    margin-bottom: 18px;
+	margin-bottom: 18px;
 }
 
 .progresspara {
-    font-size: 0.9em;
+	font-size: 0.9em;
 }
 
 .progress {
-    box-sizing: border-box;
-    display: inline-block;
-    width: 100%;
-    height: 20px;
-    border: 1px solid rgb(241, 104, 118);
-    margin-bottom: 40px;
+	box-sizing: border-box;
+	display: inline-block;
+	width: 100%;
+	height: 20px;
+	border: 1px solid rgb(241, 104, 118);
+	margin-bottom: 40px;
 }
 
 .collected {
-    display: inline-block;
-    width: 49.45%;
-    margin-bottom: 20px;
+	display: inline-block;
+	width: 49.45%;
+	margin-bottom: 20px;
 }
 
 .donate {
-    display: inline-block;
-    width: 49.45%;
-    height: 20px;
+	display: inline-block;
+	width: 49.45%;
+	height: 20px;
 }
 
 .donate input {
-    border: 1px solid rgb(241, 104, 118);
-    padding: 2px;
-    font-size: 0.9em;
-    font-family: 'Lato', sans-serif;
-    width: 60%;
+	border: 1px solid rgb(241, 104, 118);
+	padding: 2px;
+	font-size: 0.9em;
+	font-family: 'Lato', sans-serif;
+	width: 60%;
 }
 
 .donate button {
-    padding: 2px;
-    font-size: 0.9em;
-    background-color: rgb(241, 104, 118);
-    color: white;
-    cursor: pointer;
-    font-family: 'Lato', sans-serif;
-    width: 30%;
-    transition: all 0.3s ease;
+	padding: 2px;
+	font-size: 0.9em;
+	background-color: rgb(241, 104, 118);
+	color: white;
+	cursor: pointer;
+	font-family: 'Lato', sans-serif;
+	width: 30%;
+	transition: all 0.3s ease;
 }
 
 .donate button:hover {
-    background-color: rgb(236, 58, 76);
+	background-color: rgb(236, 58, 76);
 }
 
-.donate input, button{
-    display: inline-block;
+.donate input, button {
+	display: inline-block;
 }
 
 #settings {
-    display: block;
+	display: block;
 }
 
 #money {
-    display: none;
+	display: none;
 }
 
 #achievements {
-    display: none;
+	display: none;
 }
 
 #wish {
-    display: none;
+	display: none;
 }
 
 #barone {
-    height: 100%;
-    width: 57%;
-    background-color: #91FFE2;
+	height: 100%;
+	width: 57%;
+	background-color: #91FFE2;
 }
 
 #bartwo {
-    height: 100%;
-    width: 57%;
-    background-color: #91FFE2;
+	height: 100%;
+	width: 57%;
+	background-color: #91FFE2;
 }
 
 #credit {
-    display: block;
+	display: block;
 }
 
 #paypal {
-    display: none;
+	display: none;
 }
 
 #qiwi {
-    display: none;
+	display: none;
 }
 
 #datetitle, #yeartitle {
-    margin-bottom: 1px;
+	margin-bottom: 1px;
 }
 
 .sitecontent {
-    overflow: hidden;
+	overflow: hidden;
 }
 
 .dropdown {
-    border: 1px solid #a0b3b0;
-    border-radius: 3px;
-    display: block;
-    height: 30px;
-    margin-bottom: 10px;
-    background: #fff url("../IMG/caret-bottom.svg") no-repeat 90% 50%;
+	border: 1px solid #A0B3B0;
+	border-radius: 3px;
+	display: block;
+	height: 30px;
+	margin-bottom: 10px;
+	background: #FFFFFF url('../IMG/caret-bottom.svg') no-repeat 90% 50%;
 }
 
 .currenttitle {
-    width: 90%;
-    display: inline-block;
-    line-height: 20px;
-    font-size: 1em;
-    color: transparent;
-    text-shadow: 0 0 0 black;
-    cursor: pointer;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 300;
+	width: 90%;
+	display: inline-block;
+	line-height: 20px;
+	font-size: 1em;
+	color: transparent;
+	text-shadow: 0 0 0 black;
+	cursor: pointer;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 300;
 }
 
 .dropdownitems {
-    position: absolute;
-    background-color: white;
-    box-shadow: 2px 4px 20px rgba(19, 35, 47, 0.3);
+	position: absolute;
+	background-color: white;
+	box-shadow: 2px 4px 20px rgba(19, 35, 47, 0.3);
 }
 
 .dropdownitems a {
-    cursor: pointer;
-    padding: 10px 20px;
-    display: block;
-    text-decoration: none;
-    color: black;
-    font-size: 1em;
+	cursor: pointer;
+	padding: 10px 20px;
+	display: block;
+	text-decoration: none;
+	color: black;
+	font-size: 1em;
 }
 
 .dropdownitems a:hover {
-    background-color: rgb(241, 104, 118);
-    color: white;
+	background-color: rgb(241, 104, 118);
+	color: white;
 }
 
 .datefield {
-    display: inline-block;
-    width: 30.3%;
+	display: inline-block;
+	width: 30.3%;
 }
 
 .methdofield {
-    width: 30.3%;
+	width: 30.3%;
 }
 
 .month {
-    height: 30%;
-    overflow: scroll;
+	height: 30%;
+	overflow: scroll;
 }
 
 .selected {
-    color: black;
+	color: black;
 }
 
 #paymentmethod {
-    display: none;
+	display: none;
 }
 
 #date {
-    display: none;
+	display: none;
 }
 
 #year {
-    display: none;
+	display: none;
 }
 
 #menutitle {
-    color: black;
-    padding-top: 5px;
-    padding-left: 5px;
-    margin-bottom: 6px;
+	color: black;
+	padding-top: 5px;
+	padding-left: 5px;
+	margin-bottom: 6px;
 }
 
 .numbers {
-    font-family: 'Lato', sans-serif;
-    padding-left: 30%;
+	font-family: 'Lato', sans-serif;
+	padding-left: 30%;
 }
 
 .donatedrow {
-    box-sizing: border-box;
-    display: inline-block;
+	box-sizing: border-box;
+	display: inline-block;
 }
 
 .donatedrow:not(:last-child) {
-    padding-right: 15%;
+	padding-right: 15%;
 }
 
 .donatedrow .donated {
-    display: block;
-    font-size: 0.95em;
-    color: black;
+	display: block;
+	font-size: 0.95em;
+	color: black;
 }
 
 .donatedrow .timer {
-    display: inline-block;
-    color: black;
-    font-size: 1.25em;
+	display: inline-block;
+	color: black;
+	font-size: 1.25em;
 }
 
 .donatedrow .dollar {
-    display: inline-block;
-    color: black;
-    font-size: 1.5em;
+	display: inline-block;
+	color: black;
+	font-size: 1.5em;
 }
 
 footer {
-    margin-top: 100px;
-    width: 100%;
-    height: 70px;
-    background-color: white;
-    border-top: 1px outset black;
+	margin-top: 100px;
+	width: 100%;
+	height: 70px;
+	background-color: white;
+	border-top: 1px outset black;
 }
