--- a/landing/CSS/userpage_style.css
+++ b/landing/CSS/userpage_style.css
@@ -99,7 +99,8 @@ body {
 	height: 30px;
 	background-color: white;
 	display: inline-flex;
-	border: 1px solid rgb(241, 104, 118);
+	border-top: 1px solid rgb(241, 104, 118);
+	border-left: 1px solid rgb(241, 104, 118);
 	border-bottom: none;
 	padding-top: 2px;
 	padding-right: 10px;
@@ -111,6 +112,10 @@ body {
 	font-size: 1em;
 	margin: 0;
 	transition: all 0.3s ease;
+}
+
+.lastuser {
+	border-right: 1px solid rgb(241, 104, 118);
 }
 
 .usernav .tab:hover {
@@ -145,10 +150,6 @@ body {
 	text-align: right;
 }
 
-.optionrow {
-	display: block;
-}
-
 .one {
 	border-bottom: 1px solid grey;
 	padding-bottom: 10px;
@@ -158,14 +159,9 @@ body {
 	display: block;
 	border: 1px solid #A0B3B0;
 	padding: 5px;
-	margin-bottom: 10px;
+	margin-bottom: 16px;
 	width: 98%;
 	border-radius: 3px;
-}
-
-.topprofile input:last-child {
-	margin-bottom: 5px;;
-	margin-top: 10px;
 }
 
 .field {
@@ -178,6 +174,12 @@ body {
 
 .wrapper {
 	border-top: 1px solid grey;
+	padding-top: 10px;
+}
+
+.wrapper input {
+	margin-top: 0px;
+	margin-bottom: 16px;
 }
 
 .wish {
@@ -193,13 +195,12 @@ h1 {
 }
 
 .confirm {
-	margin-top: 10px;
 	border-radius: 5px;
 	background-color: rgba(211, 211, 211, 0.3);
-	padding: 15px;
+	padding: 10px 10px 2px 10px;
 }
 
-.confirm p, input {
+.confirm p {
 	margin-bottom: 5px;
 }
 
@@ -207,6 +208,7 @@ h1 {
 	padding: 5px;
 	background-color: white;
 	border-radius: 3px;
+	margin-bottom: 16px;
 }
 
 .btnwrapper {
@@ -546,6 +548,14 @@ button:hover {
 	display: inline-block;
 	color: black;
 	font-size: 1.5em;
+}
+
+.errortxt {
+	font-family : 'Lato', sans-serif;
+    font-size : 0.8em;
+    width: 100%;
+    color: orangered;
+    margin-top: -16px;
 }
 
 footer {
