--- a/landing/CSS/current_style.css
+++ b/landing/CSS/current_style.css
@@ -204,6 +204,29 @@ body {
 	margin-bottom: 30px;
 }
 
+::-webkit-input-placeholder {
+   font-family: 'Lato', sans-serif;
+   font-size: 1.1em;
+   color: #777777;
+   font-weight: 300;
+}
+
+:-moz-placeholder {
+   font-family: 'Lato', sans-serif;
+   font-size: 1.1em;
+}
+
+::-moz-placeholder {
+   font-family: 'Lato', sans-serif;
+   font-size: 1.1em;
+}
+
+:-ms-input-placeholder {  
+   font-family: 'Lato', sans-serif;
+   font-size: 1.1em;
+   color: #777777;  
+}
+
 footer {
 	margin-top: 100px;
 	width: 100%;
