--- a/landing/CSS/index_style.css
+++ b/landing/CSS/index_style.css
@@ -316,6 +316,29 @@ p {
 	margin-top: 48.3px;
 }
 
+::-webkit-input-placeholder {
+   font-family: 'Lato', sans-serif;
+   font-size: 1.1em;
+   color: #777777;
+   font-weight: 300;
+}
+
+:-moz-placeholder {
+   font-family: 'Lato', sans-serif;
+   font-size: 1.1em;
+}
+
+::-moz-placeholder {
+   font-family: 'Lato', sans-serif;
+   font-size: 1.1em;
+}
+
+:-ms-input-placeholder {  
+   font-family: 'Lato', sans-serif;
+   font-size: 1.1em;
+   color: #777777;  
+}
+
 footer {
 	width: 100%;
 	height: 70px;
