--- a/landing/CSS/userpage_style.css
+++ b/landing/CSS/userpage_style.css
@@ -174,6 +174,10 @@ body {
 	border-radius: 3px;
 }
 
+input:focus, input.input:focus {
+	border-color: #b3d6cd;
+}
+
 .field {
 	display: block;
 }
@@ -184,7 +188,8 @@ body {
 
 .wrapper {
 	border-top: 1px solid grey;
-	padding-top: 10px;
+	border-bottom: 1px solid grey;
+	padding-top: 16px;
 }
 
 .wrapper input {
@@ -209,22 +214,47 @@ h1 {
 	background-color: rgba(211, 211, 211, 0.3);
 	padding: 10px 10px 2px 10px;
 	position: relative;
+	margin-top: 10px;
 }
 
-.confirm p {
+.confirm .willspin, .address .willspin {
+	color: #424242;
+	position: absolute;
+	top: 2px;
+}
+
+.confirm p, .address p {
 	margin-bottom: 5px;
+	font-size: 1em;
+	font-family: 'Lato', sans-serif;
+	position: relative;
+	perspective: 1000px;
 }
 
-.confirm input {
+.address p {
+	margin-bottom: 10px;
+}
+
+.address p span, .confirm p span{
+	margin-left: 25px;
+}
+
+.address p .willspin {
+	position: absolute;
+	top: 2px;
+}
+
+.confirm input:not(.street) {
 	padding: 5px;
 	background-color: white;
 	border-radius: 3px;
 	margin-bottom: 16px;
+	width: 40%;
 }
 
 .showpassword {
 	position: absolute;
-	top: 42px;
+	top: 39px;
 	left: 210px;
 	display: inline-block;
 	height: 16px;
@@ -235,6 +265,18 @@ h1 {
 	position: absolute;
 	color: #777;
 	cursor: pointer;
+}
+
+.spinthingY {
+	transform: rotateY(360deg);
+	transform-origin: center center;
+	transition: all 600ms ease-in-out;
+}
+
+.spinthing {
+	transform: rotate(360deg);
+	transform-origin: center center;
+	transition: all 600ms ease-in-out;
 }
 
 .showpassword i:hover {
@@ -276,14 +318,14 @@ button:hover {
 	margin-bottom: 10px;
 }
 
-.topup input:not(.amount):not(.carddate):not(.ccv) {
+.topup input:not(.amount):not(.carddate):not(.ccv):not(.card):not(.cardname) {
 	padding: 5px;
 	margin-bottom: 10px;
 	border-radius: 3px;
 }
 
 .amount {
-	width: 28.5%;
+	width: 100%;
 	display: inline-block;
 	font-size: 1em;
 	padding: 5px;
@@ -293,8 +335,37 @@ button:hover {
 	margin-bottom: 0px;
 }
 
-.input.card, .input.cardname, .input.carddate, .input.ccv {
+.amount:focus ~ i {
+	color: #555;
+}
+
+.dollar {
+	position: relative;
+	display: inline-block;
+	width: 28.5%;
+	color: #777;
+}
+
+.dollar i {
+	position: absolute;
+	top: 50%;
+	right: 0.1%;
+	margin-top: -8px;
+}
+
+.inputdivisor {
 	width: 37.5%;
+	display: inline-block;
+	margin-right: 15px;
+	position: relative;
+}
+
+.inputdivisor:first-child {
+	margin-bottom: 13px;
+}
+
+.input.card, .input.cardname, .input.carddate, .input.ccv {
+	width: 100%;
 	padding: 5px;
 	border-radius: 3px;
 	border: 1px solid #A0B3B0;
@@ -311,16 +382,22 @@ button:hover {
 	border-bottom: 1px solid grey;
 }
 
-.street, .city, .country {
-	width: 40%;
+.street {
+	display: block;
+	width: 98%;
+	background-color: white;
 }
 
-.street, .house, .flat, .city, .zip {
+.city, .zip, .country {
 	display: inline-block;
+	background-color: white;
+	float: left;
+	box-sizing: border-box;
+	width: 30%;
 }
 
-.house, .flat, .zip {
-	width: 25%;
+.city, .zip {
+	margin-right: 5.001%;
 }
 
 .boxes {
@@ -485,6 +562,7 @@ button:hover {
 	background: #FFFFFF url('../IMG/caret-bottom.svg') no-repeat 90% 50%;
 	float: left;
 	margin-right: 5px;
+	position: relative;
 }
 
 .currenttitle {
@@ -496,10 +574,14 @@ button:hover {
 	cursor: pointer;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 300;
+	-webkit-user-select: none;    
+	-moz-user-select: none;
+	-ms-user-select: none;
 }
 
 .dropdownitems {
 	position: absolute;
+	width: 100%;
 	background-color: white;
 	box-shadow: 2px 4px 20px rgba(19, 35, 47, 0.3);
 	z-index: 1;
@@ -507,7 +589,7 @@ button:hover {
 
 .dropdownitems a {
 	cursor: pointer;
-	padding: 10px 20px;
+	padding: 10px 0px 10px 15%;
 	display: block;
 	text-decoration: none;
 	color: black;
@@ -597,6 +679,16 @@ button:hover {
     margin-top: -18px;
 }
 
+.errortxtcard {
+	font-family : 'Lato', sans-serif;
+    font-size : 0.7em;
+    width: 100%;
+    color: orangered;
+    position: absolute;
+    bottom: -13px;
+    left: 2px;
+}
+
 .amountwrapper {
 	padding-bottom: 10px;
 	margin-bottom: 10px;
@@ -620,6 +712,14 @@ button:hover {
 	padding-bottom: 15px;
 }
 
+.address {
+	background-color: rgba(211, 211, 211, 0.3);
+	padding: 15px 15px 5px 15px;
+	margin-top: 10px;
+	border-radius: 5px;
+	display: inline-block;
+}
+
 .cf {
 	zoom: 1;
 }
@@ -631,6 +731,37 @@ button:hover {
 
 .cf:after {
 	clear: both;
+}
+
+@-moz-document url-prefix() { 
+  .showpassword {
+    position:absolute;
+    top: 42px;
+	left: 210px;
+  }
+}
+
+::-webkit-input-placeholder {
+   font-family: 'Lato', sans-serif;
+   font-size: 1.1em;
+   color: #777777;
+   font-weight: 300;
+}
+
+:-moz-placeholder {
+   font-family: 'Lato', sans-serif;
+   font-size: 1.1em;
+}
+
+::-moz-placeholder {
+   font-family: 'Lato', sans-serif;
+   font-size: 1.1em;
+}
+
+:-ms-input-placeholder {  
+   font-family: 'Lato', sans-serif;
+   font-size: 1.1em;
+   color: #777777;  
 }
 
 footer {
