--- a/landing/CSS/userpage_style.css
+++ b/landing/CSS/userpage_style.css
@@ -274,8 +274,8 @@ h1 {
 }
 
 .spinthing {
-	transform: rotate(360deg);
 	transform-origin: center center;
+	transform: rotate(360deg);
 	transition: all 600ms ease-in-out;
 }
 
@@ -374,7 +374,7 @@ button:hover {
 
 .createwish input {
 	padding: 5px;
-	margin-bottom: 10px;
+	margin-bottom: 13px;
 	border-radius: 3px;
 }
 
@@ -382,18 +382,34 @@ button:hover {
 	border-bottom: 1px solid grey;
 }
 
+.wishwrapper {
+	width: 100%;
+	position: relative;
+}
+
+.addresswrapper {
+	width: 97.6%;
+	position: relative;
+}
+
 .street {
 	display: block;
-	width: 98%;
+	width: 100%;
 	background-color: white;
+}
+
+.city input, .zip input, .country input {
+	width: 100%;
+	background-color: white;
+	box-sizing: border-box;
 }
 
 .city, .zip, .country {
 	display: inline-block;
-	background-color: white;
 	float: left;
 	box-sizing: border-box;
 	width: 30%;
+	position: relative;
 }
 
 .city, .zip {
@@ -619,10 +635,6 @@ button:hover {
 	color: black;
 }
 
-#paymentmethod {
-	display: none;
-}
-
 #date {
 	display: none;
 }
@@ -689,6 +701,16 @@ button:hover {
     left: 2px;
 }
 
+.errortxtaddress {
+	font-family : 'Lato', sans-serif;
+    font-size : 0.7em;
+    width: 100%;
+    color: orangered;
+    position: absolute;
+    top: 29px;
+    left: 2px;
+}
+
 .amountwrapper {
 	padding-bottom: 10px;
 	margin-bottom: 10px;
@@ -744,6 +766,7 @@ button:hover {
 ::-webkit-input-placeholder {
    font-family: 'Lato', sans-serif;
    font-size: 1.1em;
+   line-height: 1em;
    color: #777777;
    font-weight: 300;
 }
@@ -751,17 +774,28 @@ button:hover {
 :-moz-placeholder {
    font-family: 'Lato', sans-serif;
    font-size: 1.1em;
+   line-height: 1em;
 }
 
 ::-moz-placeholder {
    font-family: 'Lato', sans-serif;
    font-size: 1.1em;
+   line-height: 1em;
 }
 
 :-ms-input-placeholder {  
    font-family: 'Lato', sans-serif;
    font-size: 1.1em;
-   color: #777777;  
+   color: #777777; 
+   line-height: 1em; 
+}
+
+input::-webkit-contacts-auto-fill-button {
+  visibility: hidden;
+  display: none !important;
+  pointer-events: none;
+  position: absolute;
+  right: 0;
 }
 
 footer {
